--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>宋学江的个人主页</title>
-    <link rel="stylesheet" href="assets/idangerous.swiper.css">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="/assets/idangerous.swiper.css">
+    <link rel="stylesheet" href="/assets/style.css">
   </head>
   <body>
     <div class="preloader">
@@ -60,8 +60,8 @@
         </div>
       </div>
     </div>
-    <script src="assets/jquery-1.10.1.min.js"></script>
-    <script src="assets/idangerous.swiper.js"></script>
+    <script src="/assets/jquery-1.10.1.min.js"></script>
+    <script src="/assets/idangerous.swiper.js"></script>
     <script>
       var holdPosition = 0;
       var mySwiper = new Swiper('.swiper-container',{
